[package]
name = "imt"
version = "0.1.0"
edition = "2021"

[features]
default = ["circuits", "tiny-keccak"]
circuits = []
tiny-keccak = ["dep:tiny-keccak"]
sha2 = ["dep:sha2", "dep:generic-array"]

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.205", features = ["derive"] }
sha2 = { version = "0.10.8", optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"], optional = true }
generic-array = { version = "0.14", optional = true }
